# packages/api-client/openapi.json
@@ -1565,6 +1565,43 @@
         ]
       }
     },
+    "/v1/content/kpss-targets": {
+      "get": {
+        "operationId": "GeoController_getKpssTargets",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "content"
+        ]
+      }
+    },
+    "/v1/content/kpss-targets/cities/{cityCode}": {
+      "get": {
+        "operationId": "GeoController_getKpssCityPostings",
+        "parameters": [
+          {
+            "name": "cityCode",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "content"
+        ]
+      }
+    },
     "/v1/content/universities/{id}/programs": {
       "get": {
         "operationId": "GeoController_getUniversityPrograms",
